fix: Loading UI was showing behind the success because I was rendering it inside of modal

--- a/components/ui/Success.module.css
+++ b/components/ui/Success.module.css
@@ -1,8 +1,41 @@
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.55);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .success {
+  width: 400px;
+  margin: 10rem auto;
   text-align: center;
-  padding: 2rem 5rem !important;
+  padding: 2rem 5rem;
+  background-color: whitesmoke;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+  animation: fade-slide-up 0.3s ease-out forwards;
 }
 
 .success img {
   height: 10rem;
+}
+
+.disable-animation {
+  animation: none;
+}
+
+@keyframes fade-slide-up {
+  from {
+    opacity: 0;
+    transform: translateY(4rem);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
